# thedesk

./: .gitignore  .parlance.json  CMakeLists.txt  README.md  theDesk.pro
desktop/: CMakeLists.txt  acknowledgements.html  defaults.conf  desktop.pro  main.cpp  resources.qrc  transparentdialog.cpp  transparentdialog.ui
desktop-portal/: CMakeLists.txt  desktop-portal.pro  main.cpp  org.freedesktop.impl.portal.desktop.thedesk.service  org.freedesktop.impl.portal.desktop.thedesk.service.in  portalcommon.cpp  portalcommon.h  portalhandle.cpp  portalhandle.h  screenshotmanager.cpp  screenshotmanager.h  thedesk-portals.conf  thedesk.portal  xdg-desktop-portal-thedesk.service  xdg-desktop-portal-thedesk.service.in
desktop-portal/backend/: abstractportalbackend.cpp  abstractportalbackend.h  abstractscreencopysession.cpp  abstractscreencopysession.h  waylandportalbackend.cpp  waylandportalbackend.h  waylandscreencopysession.cpp  waylandscreencopysession.h  x11portalbackend.cpp  x11portalbackend.h  x11screencopysession.cpp  x11screencopysession.h
desktop-portal/dialogs/: accessdialog.cpp  accessdialog.h  accessdialog.ui  accountdialog.cpp  accountdialog.h  accountdialog.ui  filedialog.cpp  filedialog.h  filedialog.ui  penbutton.cpp  screencastdialog.cpp  screencastdialog.h  screencastdialog.ui  screenshotwindow.cpp  screenshotwindow.h  screenshotwindow.ui
desktop-portal/interfaces/: accessinterface.cpp  accessinterface.h  accountinterface.cpp  accountinterface.h  filechooserinterface.cpp  filechooserinterface.h  notificationinterface.cpp  notificationinterface.h  screencastinterface.cpp  screencastinterface.h  screenshotinterface.cpp  screenshotinterface.h  settingsinterface.cpp  settingsinterface.h  wallpaperinterface.cpp  wallpaperinterface.h
desktop-portal/translations/: ar_SA.ts  au_AU.ts  cy.ts  da.ts  de.ts  en_US.ts  es.ts  es_VE.ts  id.ts  nl.qm  nl.ts  pt_BR.ts  sv.ts  vi.qm  vi.ts
desktop/background/: background.cpp  background.h  background.ui
desktop/bar/: barwindow.cpp  barwindow.h  barwindow.ui  chunkcontainer.cpp  chunkcontainer.h  chunkcontainer.ui  currentappwidget.cpp  currentappwidget.h  currentappwidget.ui  currentappwidgetmenu.cpp  currentappwidgetmenu.h  currentappwidgetmenu.ui  mainbarwidget.cpp  mainbarwidget.h  mainbarwidget.ui  taskbarapplicationwidget.cpp  taskbarapplicationwidget.h  taskbardesktopwidget.cpp  taskbardesktopwidget.h  taskbardesktopwidget.ui  taskbarwidget.cpp  taskbarwidget.h  taskbarwidget.ui
desktop/cli/: commandline.cpp  commandline.h
desktop/crash/: crashhandling.cpp  crashhandling.h
desktop/gateway/: appsearchprovider.cpp  appsearchprovider.h  appselectionmodel.cpp  appselectionmodel.h  appselectionmodellistdelegate.cpp  appselectionmodellistdelegate.h  gateway.cpp  gateway.h  gateway.ui  gatewaysearchmodel.cpp  gatewaysearchmodel.h  gatewaysearchmodeldelegate.cpp  gatewaysearchmodeldelegate.h  maingatewaywidget.cpp  maingatewaywidget.h  maingatewaywidget.ui  searchresultswidget.cpp  searchresultswidget.h  searchresultswidget.ui
desktop/media/: welcome1-old.webm  welcome2-old.webm  welcome2.webm  welcome3.webm
desktop/onboarding/: onboarding.cpp  onboarding.h  onboarding.ui  onboardingbar.cpp  onboardingbar.h  onboardingbar.ui  onboardingbetathankyou.cpp  onboardingbetathankyou.h  onboardingcontroller.cpp  onboardingfinal.ui  onboardingstepper.cpp  onboardingvideo.cpp  onboardingvideo.h  onboardingvideo.ui  onboardingwelcome.cpp  onboardingwelcome.ui
desktop/plugins/: plugininterface.h  pluginmanager.cpp  pluginmanager.h
desktop/run/: rundialog.cpp  rundialog.h  rundialog.ui
desktop/server/: sessionserver.cpp  sessionserver.h
desktop/session/: endsession.cpp  endsession.h  endsession.ui  endsessionbutton.cpp  endsessionbutton.h
desktop/statuscenter/: leftpanedelegate.cpp  leftpanedelegate.h  statuscenter.cpp  statuscenter.h  statuscenter.ui  statuscenterleftpane.cpp  statuscenterleftpane.h  statuscenterleftpane.ui  statuscenterquickswitch.cpp  statuscenterquickswitch.h  statuscenterquickswitch.ui
desktop/systemsettings/: systemsettings.cpp  systemsettings.h  systemsettings.ui  systemsettingsleftpane.cpp  systemsettingsleftpane.h  systemsettingsleftpane.ui
desktop/translations/: aa_ER.ts  aa_ET.ts  am_ET.ts  ar_BH.ts  ar_DZ.ts  (+123 more)
libthedesk/: CMakeLists.txt  actionquickwidget.cpp  actionquickwidget.h  actionquickwidget.ui  application.cpp  application.h  barmanager.cpp  barmanager.h  chunk.cpp  chunk.h  common.cpp  common.h  gatewaymanager.cpp  gatewaymanager.h  gatewaysearchprovider.cpp  gatewaysearchprovider.h  hudmanager.cpp  hudmanager.h  icontextchunk.cpp  icontextchunk.h  icontextchunk.ui  keygrab.cpp  keygrab.h  libthedesk.pro  libthedeskConfig.cmake.in  libthedesk_global.h  libthedesk_resources.qrc  localemanager.cpp  localemanager.h  onboardingmanager.cpp  onboardingmanager.h  onboardingpage.cpp  onboardingpage.h  powermanager.cpp  powermanager.h  qsettingsformats.cpp  qsettingsformats.h  quickswitch.cpp  quickswitch.h  quietmodemanager.cpp  (+9 more)
locker/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
platform/: CMakeLists.txt  cursorhandler.cpp  cursorhandler.h  fontformat.cpp  fontformat.h  iconloaderengine.cpp  iconloaderengine.h  paletteformat.cpp  paletteformat.h  palettes.json  platform.pro  platformdefaults.conf  platformtheme.cpp  platformtheme.h  plugin.cpp  plugin.h  plugin.json  thedesk-platform-resources.qrc  thedesk-platform.conf
plugins/: CMakeLists.txt  plugins.pri  plugins.pro
polkitagent/: CMakeLists.txt  authwindow.cpp  authwindow.h  authwindow.ui  common.cpp  common.h  identitypopover.cpp  identitypopover.h  identitypopover.ui  main.cpp  overlaywindow.cpp  overlaywindow.h  overlaywindow.ui  polkitagent.pro  polkitinterface.cpp  polkitinterface.h
startdesk/: CMakeLists.txt  main.cpp  resources.qrc  splashwindow.cpp  splashwindow.h  splashwindow.ui  start-thedesk-wayland.in  startdesk.pro  thedesk-wayland.desktop  thedesk-wayland.desktop.in  thedesk.desktop  thedesk.desktop.in  wayfire-thedesk-config.conf
wayfire-plugins/: CMakeLists.txt  plugins.pri  wayfire-plugins.pro
(+2346 files in other folders)
